Update to Checkstyle 8.25
also fixed some deprecation warnings